// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package customer.api;

option java_outer_classname = "CustomerApi";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

message Customer {
  string customer_id = 1 [(kalix.field).id = true];
  string email = 2;
  string name = 3;
}


message GetCustomerRequest {
  string customer_id = 1 [(kalix.field).id = true];
}

message ChangeNameRequest {
  string customer_id = 1 [(kalix.field).id = true];
  string new_name = 2;
}



// tag::eventsourced-entity[]
service CustomerService {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "customer.domain.CustomerEntity"
      type_id: "customers"
      state: "customer.domain.CustomerState"
      events: [
        "customer.domain.CustomerCreated",
        "customer.domain.CustomerNameChanged"]
    }
  };
  rpc Create(Customer) returns (google.protobuf.Empty) {}
  rpc ChangeName(ChangeNameRequest) returns (google.protobuf.Empty) {}
  rpc GetCustomer(GetCustomerRequest) returns (Customer) {}
}
// end::eventsourced-entity[]
